--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,6 @@ rootProject.name='AndroidLearn'
 include ':uicustionviews'
 include ':listviewtest'
 include ':recycleview'
+include ':broadcastbestpratice'
+include ':filepersistentce'
+include ':sharedprefernces'
