add module playaudio

--- a/settings.gradle
+++ b/settings.gradle
@@ -10,3 +10,5 @@ include ':9patch'
 include ':runtimepermission'
 include ':contacts'
 include ':notification'
+include ':cameraalbum'
+include ':playaudio'
